Random color lightness distance from zero, LDEV modal dark mode fix

--- a/src/components/TreeView.css
+++ b/src/components/TreeView.css
@@ -3,6 +3,11 @@
     --icon-color: #444;
 }
 
+.dark-mode .tree-view {
+    --connection-color: #aaa;
+    --icon-color: white;
+}
+
 ul.tree-view > li {
     list-style-type: none;
 }
